--- a/ejercicios04/01.html
+++ b/ejercicios04/01.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-	<form action="01.php" method="post">
+	<form action="01.php" method="POST">
 		<input type="text" name="usu"> Usuario
-		<input type="password" name="contra"> Contraseña
+		<input type="password" name="contra"> Password
 		<input type="submit" value="Enviar">
 	</form>
 </body>
